fixed: deleting text uses the default content again + row gap issue + removed text formatting + strip html in heading content

--- a/src/block/table-of-contents/style.scss
+++ b/src/block/table-of-contents/style.scss
@@ -4,6 +4,11 @@
 		column-gap: 32px;
 	}
 
+	// Needed by margin bottom / row gap.
+	a {
+		display: inline-block;
+	}
+
 	:is(ul, ol) {
 		padding-inline-start: 1em;
 	}
